# nsg-tool

./: README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: api-format-sort.yml  api-format-sort2.yml  api-format.yml  api-lint.yml  api-openapi.yml  api-schema-format.yml  api-test.yml  openapi.yml  python-uv.yaml  web-client-format.yml  web-client-lint.yml
apps/api/: .gitignore  README.md  manage.py  openapi.json  pyproject.toml  schemas.py  utils.py
apps/api/api/: api.py  apps.py  conftest.py  models.py
apps/api/api/auth/: __init__.py  api.py  errors.py  schemas.py
apps/api/api/auth/tests/: __init__.py  conftest.py  test_get_csrf_token.py  test_login.py  test_logout.py  test_me.py
apps/api/api/domain/: __init__.py
apps/api/api/domain/users/: __init__.py  api.py  errors.py  factory.py  model.py  schemas.py
apps/api/api/domain/users/test/: __init__.py  conftest.py
apps/api/api/domain/users/tests/: conftest.py  test_list_users.py  test_model.py
apps/api/api/management/: __init__.py
apps/api/api/management/commands/: __init__.py  generate_openapi.py
apps/api/api/migrations/: 0001_initial.py
apps/api/api/system/: __init__.py  api.py  schemas.py  test_system_api.py
apps/api/core/: __init__.py  config.py  settings.py  settings_common.py  settings_dev.py  settings_prod.py  settings_test.py  urls.py
apps/client-web/: components.json  eslint.config.js  package.json  prettier.config.js  tailwind.config.mjs
apps/client-web/app/components/: NotFound.tsx
apps/client-web/app/components/ui/: button.tsx
apps/client-web/app/routes/: __root.tsx  index.tsx
