[project]
name = "api"
version = "0.0.1"
description = "REST API for NSG tool."
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "django>=5.1.5",
    "django-ninja>=1.3.0",
    "ninja-extended",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
]

[tool.uv.sources]
ninja-extended = { git = "https://github.com/lucas-camp-it-soultions/ninja-extended.git" }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.2",
]
